# MLTask_ComfyUI

./: README.md  __init__.py  constants.py  pyproject.toml
Common/: Utils.py
SocialMan/: PosterData.py  SocialManPoster.py
UtilNodes/: TextGenerator.py
js/: socialman.js
workflows/: Social_man_example_workflow.json
